# LittleBot

./: .gitignore  CMakeLists.txt  Makefile  README.md  keyboard_control_main.c  little_bot  little_bot_program  main.c  package.xml
2d_lilbot_sim/: package.xml  setup.cfg  setup.py
2d_lilbot_sim/2d_lilbot_sim/: 2d_lilbot_sim.py
action/: RotateAbsolute.action  RotateRelative.action
examples/Keyboard_Control/: Makefile  keyboard_control  keyboard_control.c
include/: Definitions.h  Drivetrain.h  Drivetrain.hpp  Encoder.h  Keyboard.h  Motor.h  Motor.hpp  PID.h  README.md  Robot.hpp
launch/: little_captain.launch.py
lilbot/: CMakeLists.txt  package.xml
lilbot/src/: lilbot_core.cpp  lilbot_driver.cpp  lilbot_pid_controller.cpp
lilbot_driver/: CMakeLists.txt  package.xml
lilbot_driver/include/lilbot_driver/: lilbot_definitions.h  lilbot_encoder.hpp  lilbot_motor.hpp  lilbot_pid_controller.hpp
lilbot_driver/launch/: lilbot_driver.launch.py
lilbot_driver/src/: lilbot_driver_node.cpp  lilbot_encoder.cpp  lilbot_motor.cpp  lilbot_pid_controller.cpp
lilbot_interfaces/: CMakeLists.txt  package.xml
lilbot_interfaces/srv/: PID.srv
lilbot_msgs/: CMakeLists.txt  package.xml
lilbot_msgs/msg/: MotorState.msg
lilbot_msgs/srv/: Pid.srv
lilbot_pygame/: package.xml  setup.cfg  setup.py
lilbot_pygame/lilbot_pygame/: lilbot_pygame_node.py
lilbot_webot_sim/: CMakeLists.txt  lilbot_webot_sim.xml  package.xml  setup.cfg  setup.py
lilbot_webot_sim/controllers/simple_little_bot_controller/: simple_little_bot_controller  simple_little_bot_controller.cpp
lilbot_webot_sim/include/lilbot_webot_sim/: lilbot_webot_sim.hpp
lilbot_webot_sim/launch/: lilbot_launch.py
lilbot_webot_sim/lilbot_webot_sim/: lilbot_driver.py  master.py  obstacle_avoider.py  odom_publisher.py  slave.py
lilbot_webot_sim/protos/: .lilbot.cache  lilbot.proto
lilbot_webot_sim/resource/: lilbot.urdf
lilbot_webot_sim/rviz/: config.rviz
lilbot_webot_sim/src/: lilbot_webot_sim.cpp
lilbot_webot_sim/worlds/: .lilbot_world.wbproj  .lilbot_world_backup.wbproj  .little_bot_basic.wbproj  lilbot_world.wbt  lilbot_world_backup.wbt  little_bot_basic.wbt
lilbot_webots_sim/: package.xml  setup.cfg  setup.py
lilbot_webots_sim/launch/: lilbot_webots_sim_launch.py
lilbot_webots_sim/lilbot_webots_sim/: lilbot_webots_driver.py
lilbot_webots_sim/resource/meshes/textures/: body.mtl  wheel.mtl
lilbot_webots_sim/resource/urdf/: webots_lilbot_description.urdf
lilbot_webots_sim/resource/worlds/: lilbot_world.wbt
lilbot_webots_sim_pkg/: package.xml  setup.cfg  setup.py
lilbot_webots_sim_pkg/launch/: robot_launch.py
lilbot_webots_sim_pkg/lilbot_webots_sim_pkg/: lilbot_webots_driver.py  obstacle_avoider.py  odom_publisher.py
lilbot_webots_sim_pkg/resource/protos/: .lilbot.cache  lilbot.proto  lilbot_with_balls.proto
lilbot_webots_sim_pkg/resource/urdf/: lilbot_description.urdf  webots_lilbot_description.urdf
lilbot_webots_sim_pkg/resource/worlds/: .lilbot_world.wbproj  default_world.wbt  lilbot_world.wbt
little_bot_2d_sim/: package.xml  setup.cfg  setup.py
little_bot_2d_sim/little_bot_2d_sim/: little_bot_2d_sim_node.py
little_bot_3d_sim/: CMakeLists.txt  package.xml
little_bot_3d_sim/launch/: display.launch.py
little_bot_3d_sim/meshes/: base.stl  left_wheel.stl  right_wheel.stl
little_bot_3d_sim/model/: model.config  model.sdf
little_bot_3d_sim/rviz/: little_bot_3d_sim.rviz
little_bot_3d_sim/src/: state_publisher.cpp
little_bot_3d_sim/urdf/: little_bot_3d_sim.urdf.xml
little_bot_interfaces/: CMakeLists.txt  package.xml
little_bot_keyboard_control/: CMakeLists.txt  package.xml
little_bot_keyboard_control/include/: keyboard_reader.hpp  keyboard_remote_controller.hpp
little_bot_keyboard_control/src/: keyboard_reader.cpp
msg/: README.md
my_package/: package.xml  setup.py
my_package/my_package/: my_robot_driver.py  obstacle_avoider.py
my_package/resource/: my_robot.urdf
my_package/worlds/: little_bot_world.wbt  my_world.wbt
remote_control/: CMakeLists.txt  package.xml
remote_control/include/: keyboard_control.hpp
remote_control/src/: keyboard_control.cpp  keyboard_remote_controller.cpp
scripts/: Motor.py  Robot.py
simulation/: main.py
simulation/py_venv/: pyvenv.cfg
src/: Drivetrain.c  Drivetrain.cpp  Drivetrain.hpp  Encoder.c  Keyboard.c  Motor.c  Motor.cpp  Motor.hpp  PID.c  README.md  Robot.cpp  Robot_Node.cpp  bot_captain.cpp  bot_worker.cpp  drivetrain.cpp  gpio_test.cpp  little_bot.cpp  little_captain.cpp  little_robot.cpp  main.c  main.cpp  remote_controller.cpp
srv/: README.md
tests/: test_drivetrain_control.py  test_motor_control.py  test_pid_drivetrain_control.py
tests/2D_Simulation/: main.py
tests/Arduino/dc_motor_pid_test_463RPM/: dc_motor_pid_test_463RPM.ino
tests/Arduino_Tests/dc_motor_pid_test_463RPM/: dc_motor_pid_test_463RPM.ino
tests/C/Keyboard/: main.c
tests/Keyboard_Test/: keytest
tests/Python/Motor/: motor_test.py
tests/basic_motor_test_cpp/: basic_motor_test.cpp
