<?xml version="1.0"?>
<package format="3">
  <name>remote_control</name>
  <version>0.0.0</version>
  <description>little_bot is a package used to control a simple raspberry pi based 2 wheel robot.</description>
  <maintainer email="jeffreyspaceboy@gmail.com">Jeffrey Fisher II</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>action_msgs</depend>
  <depend>geometry_msgs</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
